middleware added current apis tested
