# api/docs/swagger.json
@@ -10,6 +10,11 @@
     "paths": {
         "/users/password": {
             "put": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "changing user password",
                 "consumes": [
                     "application/json"
@@ -62,6 +67,11 @@
         },
         "/users/profile": {
             "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "getting user profile by user id",
                 "consumes": [
                     "application/json"
@@ -103,6 +113,11 @@
         },
         "/users/update": {
             "put": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "updating user profile",
                 "consumes": [
                     "application/json"
@@ -173,7 +188,7 @@
                 "description": {
                     "type": "string"
                 },
-                "statisCode": {
+                "statusCode": {
                     "type": "integer"
                 }
             }
@@ -181,13 +196,26 @@
         "models.UpdateUser": {
             "type": "object",
             "properties": {
-                "full_name": {
+                "email": {
                     "type": "string"
                 },
-                "native_language": {
+                "first_name": {
+                    "type": "string"
+                },
+                "last_name": {
+                    "type": "string"
+                },
+                "username": {
                     "type": "string"
                 }
             }
+        }
+    },
+    "securityDefinitions": {
+        "ApiKeyAuth": {
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header"
         }
     }
 }
