# api/handlers/v1/users.go
@@ -3,13 +3,13 @@ package v1
 import (
 	"api_gateway/api/handlers/models"
 	pb "api_gateway/genproto/users"
-	"api_gateway/pkg/logger"
 	"net/http"
 
 	"github.com/gofiber/fiber/v2"
 )
 
 // GetUserProfile  	godoc
+// @Security ApiKeyAuth
 // @Router 			/users/profile [get]
 // @Summary 		Get User Profile
 // @Description 	getting user profile by user id
@@ -29,13 +29,14 @@ func (h *HandlerV1) GetUserProfile(ctx *fiber.Ctx) error {
 
 	resp, err := h.services.UsersService().GetUserProfile(reqCtx, &pb.PrimaryKey{Id: user.Id})
 	if err != nil {
-		return handleResponse(ctx, h.log, "error while using GetUserProfile method of users service", http.StatusInternalServerError, logger.Error(err))
+		return handleResponse(ctx, h.log, "error while using GetUserProfile method of users service", http.StatusInternalServerError, err.Error())
 	}
 
 	return handleResponse(ctx, h.log, "", http.StatusOK, resp)
 }
 
 // UpdateUserProfile  	godoc
+// @Security ApiKeyAuth
 // @Router 			/users/update [put]
 // @Summary 		Update User Profile
 // @Description 	updating user profile
@@ -55,16 +56,13 @@ func (h *HandlerV1) UpdateUserProfile(ctx *fiber.Ctx) error {
 		return handleResponse(ctx, h.log, "error while getting user info from token", http.StatusBadRequest, err.Error())
 	}
 
-	req := models.UpdateUser{}
+	req := pb.UpdateUser{}
 	if err = ctx.BodyParser(&req); err != nil {
 		return handleResponse(ctx, h.log, "error while getting request body", http.StatusBadRequest, err.Error())
 	}
+	req.Id = user.Id
 
-	resp, err := h.services.UsersService().UpdateUserProfile(reqCtx, &pb.UpdateUser{
-		Id:             user.Id,
-		FullName:       req.FullName,
-		NativeLanguage: req.NativeLanguage,
-	})
+	resp, err := h.services.UsersService().UpdateUserProfile(reqCtx, &req)
 	if err != nil {
 		return handleResponse(ctx, h.log, "error while using UpdateUserProfile method of users service", http.StatusInternalServerError, err.Error())
 	}
@@ -73,6 +71,7 @@ func (h *HandlerV1) UpdateUserProfile(ctx *fiber.Ctx) error {
 }
 
 // ChangePassword  	godoc
+// @Security ApiKeyAuth
 // @Router 			/users/password [put]
 // @Summary 		Change User Password
 // @Description 	changing user password
