# api/router.go
@@ -1,7 +1,12 @@
+// @title MoneyMate
+// @version 1.0
+// @description Something big
+// @BasePath /
 package api
 
 import (
 	_ "api_gateway/api/docs"
+	"api_gateway/api/handlers/middleware"
 	v1 "api_gateway/api/handlers/v1"
 	"api_gateway/grpc/client"
 	"api_gateway/pkg/logger"
@@ -9,6 +14,7 @@ import (
 	rabbitmq "api_gateway/pkg/messege_brokers/rabbitMQ"
 	"time"
 
+	"github.com/casbin/casbin/v2"
 	"github.com/gofiber/fiber/v2"
 	"github.com/gofiber/fiber/v2/middleware/cors"
 	"github.com/segmentio/encoding/json"
@@ -18,9 +24,13 @@ import (
 // @title MoneyMate
 // @version 1.0
 // @description Something big
-
 // @BasePath /
-func NewRouter(log logger.ILogger, services client.IServiceManager, rabbitMQProducer rabbitmq.IRabbitMQProducer, iKafka kafka.IKafka) *fiber.App {
+
+// @securityDefinitions.apikey ApiKeyAuth
+// @in header
+// @name Authorization
+
+func NewRouter(log logger.ILogger, services client.IServiceManager, rabbitMQProducer rabbitmq.IRabbitMQProducer, iKafka kafka.IKafka, casbinEnforcer *casbin.Enforcer) *fiber.App {
 	handlerV1 := v1.NewHandlerV1(services, log, rabbitMQProducer, iKafka)
 
 	router := fiber.New(fiber.Config{
@@ -40,7 +50,7 @@ func NewRouter(log logger.ILogger, services client.IServiceManager, rabbitMQProd
 
 	router.Get("/swagger/*", swagger.WrapHandler)
 
-	users := router.Group("/users")
+	users := router.Group("/users", middleware.JWTMiddleware(casbinEnforcer))
 	{
 		users.Get("/profile", handlerV1.GetUserProfile)
 		users.Put("/update", handlerV1.UpdateUserProfile)
